[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/animations/player_all_animations.tres" type="SpriteFrames" id=1]
[ext_resource path="res://niveles/nivel_8_transicion_de_escenas/lvl_8_player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 13 )

[node name="lvl_8_player" type="KinematicBody2D" groups=["player"]]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )
speed = 150
jump_speed = -300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
frame = 3
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Muzzle_rotation" type="Position2D" parent="."]

[node name="Muzzle" type="Position2D" parent="Muzzle_rotation"]
position = Vector2( 17, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 3
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
